graphql/kubernetes-ingress.yml
# ingress yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cardano-graphql
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: <public_igress_hostname>
      http:
        paths:
          - backend:
              serviceName: cardano-graphql
              servicePort: 80
